fix(base url): fixed base url error

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8" />
-	<link rel="icon" href="/favicon.ico" />
+	<link rel="icon" href="/TestPage/favicon.ico" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Vite App</title>
-  <script type="module" crossorigin src="/assets/index.588c3416.js"></script>
-  <link rel="modulepreload" href="/assets/vendor.8a573b4c.js">
-  <link rel="stylesheet" href="/assets/index.12409b53.css">
+  <script type="module" crossorigin src="/TestPage/assets/index.65aae5e7.js"></script>
+  <link rel="modulepreload" href="/TestPage/assets/vendor.8a573b4c.js">
+  <link rel="stylesheet" href="/TestPage/assets/index.c89a3c23.css">
 </head>
 <body>
 <div id="app"></div>
