--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8" />
-	<link rel="icon" href="/TestPage/favicon.ico" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Vite App</title>
-  <script type="module" crossorigin src="/TestPage/assets/index.a4643e29.js"></script>
-  <link rel="modulepreload" href="/TestPage/assets/vendor.869d5c25.js">
-  <link rel="stylesheet" href="/TestPage/assets/index.3bffda9c.css">
-</head>
-<body>
-<div id="app"></div>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css2?family=Inter" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
+    <script type="module" crossorigin src="/assets/index.d3f46c8d.js"></script>
+    <link rel="modulepreload" href="/assets/vendor.9af193c9.js">
+    <link rel="stylesheet" href="/assets/index.d8493e9a.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    
+  </body>
 </html>
