--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/TestPage/favicon.ico" />
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Inter" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/assets/index.d3f46c8d.js"></script>
-    <link rel="modulepreload" href="/assets/vendor.9af193c9.js">
-    <link rel="stylesheet" href="/assets/index.d8493e9a.css">
+    <script type="module" crossorigin src="/TestPage/assets/index.f3fd7271.js"></script>
+    <link rel="modulepreload" href="/TestPage/assets/vendor.e6cc65c6.js">
+    <link rel="stylesheet" href="/TestPage/assets/index.aef0a795.css">
   </head>
   <body>
     <div id="app"></div>
