--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/TestPage/favicon.ico" />
-    <link rel="stylesheet"
-          href="https://fonts.googleapis.com/css2?family=Inter" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Inter"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="/TestPage/assets/index.e0a64e0d.js"></script>
-    <link rel="modulepreload" href="/TestPage/assets/vendor.ff752aea.js">
-    <link rel="stylesheet" href="/TestPage/assets/index.631036e9.css">
+    <script type="module" crossorigin src="/TestPage/assets/index.922f0bb7.js"></script>
+    <link rel="modulepreload" href="/TestPage/assets/vendor.5ad2752b.js">
+    <link rel="stylesheet" href="/TestPage/assets/index.7489454a.css">
   </head>
   <body>
     <div id="app"></div>
